--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,10 @@ body {
 .menu-item {}
 
 .menu-item:hover {
-  @apply bg-white text-black
+  @apply bg-white text-black p-2
 }
+
+/* 
+h1 {
+  @apply font-bold text-2xl
+} */
